tests/NormalTests/paczka1/small_fuzzy/34388919.err
Error in line 2: EKRdBkOYq S977 48,1
Error in line 5: S977 S261 72,1
Error in line 3: EKRdBkOYq A16 37,7
